--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
           <label for="length" class="block mb-2 capitalize">password length:</label>
           <div class="flex">
             <input type="range" name="length" id="length" min="0" max="20" value="8" class="js-length-slider mr-4">
-            <p class="js-length-display w-6 py-1 bg-white border-none rounded-sm text-center">
+            <!-- <p class="js-length-display w-6 py-1 bg-white border-none rounded-sm text-center">
               8
-            </p>
+            </p> -->
+            <input type="number" class="js-length-input w-6 py-1 bg-white border-none rounded-sm text-center " value="8">
           </div>
         </div>
 
