length input validation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <!-- <p class="js-length-display w-6 py-1 bg-white border-none rounded-sm text-center">
               8
             </p> -->
-            <input type="number" class="js-length-input w-6 py-1 bg-white border-none rounded-sm text-center " value="8">
+            <form validate>
+              <input type="number" class="js-length-input w-6 py-1 bg-white border-none rounded-sm text-center " value="8" min="0" max="20" >
+            </form>
           </div>
         </div>
 
