--- a/index.html
+++ b/index.html
@@ -48,16 +48,11 @@
           <label for="length" class="block mb-2 capitalize">password length:</label>
           <div class="flex">
             <input type="range" name="length" id="length" min="0" max="20" value="8" class="js-length-slider mr-4">
-            <!-- <p class="js-length-display w-6 py-1 bg-white border-none rounded-sm text-center">
-              8
-            </p> -->
-            <form validate>
-              <input type="number" class="js-length-input w-6 py-1 bg-white border-none rounded-sm text-center " value="8" min="0" max="20" >
-            </form>
+            <input type="number" class="js-length-input block w-6 py-1 bg-white border-none rounded-sm text-center outline-none" value="8">
           </div>
         </div>
 
-        <button class="js-generate-btn w-full bg-blue-900 hover:bg-blue-700 text-white capitalize flex justify-center items-center py-3 border-none rounded-3xl" >
+        <button class="js-generate-btn w-full bg-blue-900 hover:bg-blue-700 hover:transform hover:translate-y-10 text-white capitalize flex justify-center items-center py-3 border-none rounded-3xl" >
           generate password
         </button>
 
